# ollama-pdf-chatbot

./: README.md  pyproject.toml
app/: main.py
