[project]
name = "ollama-pdf-chatbot"
version = "0.1.0"
description = "RAG Chatbot: A Chatbot for Answering Questions About PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docarray>=0.41.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "pypdf>=5.4.0",
]
